# postulate

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: ci.yml  pipeline-render.yml
apps/api/: .env.example  .gitignore  .goreleaser.yml  Dockerfile  Dockerfile.runner  HANDOVER.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  requirements.runner.txt
apps/api/caddy/: Caddyfile  Caddyfile.dev
apps/api/config/: targets.example.yml  targets.yml
apps/api/docs/: api.md  architecture.md  auth.md  deployment.md  development.md  openapi.yml  postman_collection.json  security.md
apps/api/scripts/: dev.sh
apps/browser-extension/: .env.example  .gitignore  .prettierrc  LICENSE  README.md  ROADMAP.md  SUBMISSION.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/browser-extension/scripts/: package.sh
apps/browser-extension/src/: manifest.json
apps/manager/: .dockerignore  .env.example  .gitignore  ACCESSIBILITY_AUDIT.md  CONTRIBUTING.md  Dockerfile  MIGRATION_STATUS.md  README.md  ROADMAP.md  docker-compose.yml  eslint.config.mjs  lighthouse-budget.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts
apps/mobile/: .env.example  App.tsx  README.md  ROADMAP.md  app.json  config.example.json  package-lock.json  package.json  pnpm-lock.yaml
apps/tui-go/: .env.example  .gitignore  .golangci.yml  .goreleaser.yml  HANDOVER.md  Makefile  README.md  config.example.toml  go.mod  go.sum
apps/tui-py/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  config.example.toml  pyproject.toml
apps/tui-py/.github/: dependabot.yml
apps/tui-py/.github/workflows/: ci.yml  release.yml
apps/tui-py/docs/: ARCHITECTURE.md  DEV_HANDOFF.md
apps/tui-py/src/cv_tui/: __init__.py  __main__.py  app.py  config.py
apps/tui-py/src/cv_tui/api/: __init__.py  client.py  enums.py  models.py
apps/tui-py/src/cv_tui/screens/: __init__.py  actions.py  applications.py  audit.py  base.py  dashboard.py  detail.py  dialogs.py  kanban.py  notes_modal.py  stats.py  theme_modal.py
apps/tui-py/src/cv_tui/theme/: __init__.py  catppuccin.py
apps/tui-py/src/cv_tui/widgets/: __init__.py  action_button.py  output_panel.py  status_badge.py
apps/tui-py/tests/: test_api_client.py  test_config.py  test_enums.py  test_models.py  test_reconnect.py  test_ui.py
apps/tui-rs/: .env.example  .gitignore  Cargo.toml  DEV_CONTEXT.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_SUMMARY.txt  DOCUMENTATION_UPDATE.md  HANDOFF.md  Makefile  README.md  ROADMAP.md  SECURITY_AUDIT.md  TODO.md  config.example.toml
apps/tui-rs/.cargo/: config.toml
apps/tui-rs/.github/workflows/: ci.yml  release.yml
apps/tui-rs/docs/: README.md  api.md  architecture.md  config.md  features.md  installation.md  keybindings.md  quickstart.md  troubleshooting.md
apps/tui-rs/src/: app.rs  config.rs  error.rs  events.rs  main.rs
apps/tui-rs/src/api/: actions.rs  applications.rs  client.rs  mod.rs  models.rs
apps/tui-rs/src/ui/: actions.rs  apps.rs  audit.rs  dashboard.rs  kanban.rs  mod.rs  new_app.rs  stats.rs  theme.rs
apps/tui-rs/tests/: client.rs
tools/: EXCLUSION-MANIFEST.md  audit-confidential.sh
(+337 files in other folders)
