[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-tui"
version = "1.0.0"
description = "Terminal UI for CV management — powered by Textual and cv-api"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jerome Soyer", email = "jeromesoyer@gmail.com" }]
keywords = ["cv", "resume", "tui", "terminal", "textual", "job-search"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Terminals",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "httpx[http2]>=0.28",
    "pydantic>=2.0",
    "websockets>=14.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/jsoyer/cv-tui-py"
Repository = "https://github.com/jsoyer/cv-tui-py"
"Bug Tracker" = "https://github.com/jsoyer/cv-tui-py/issues"
Changelog = "https://github.com/jsoyer/cv-tui-py/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "textual-dev>=1.0",
]

[project.scripts]
cv-tui = "cv_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_tui"]

[tool.hatch.build.targets.sdist]
exclude = [".git", ".github", ".claude", "uv.lock", "*.lock"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=cv_tui --cov-report=term-missing --cov-report=xml --cov-fail-under=75"

[tool.coverage.run]
omit = [
    "src/cv_tui/__main__.py",
    "src/cv_tui/app.py",
    "src/cv_tui/screens/*",
    "src/cv_tui/theme/*",
    "src/cv_tui/widgets/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
